--- a/afterlogin5.html
+++ b/afterlogin5.html
@@ -131,7 +131,7 @@
             <p>Upload student attendance records easily.</p>
         </div>
 
-        <div class="card" onclick="redirectTo('marks-upload.html')">
+        <div class="card" onclick="redirectTo('marksupload.html')">
             <img src="C:\Users\aiswa\OneDrive\Desktop\teachers dashboard\WhatsApp Image 2025-01-26 at 01.34.13_231ffdca.jpg" alt="Marks Icon" class="card-image">
             <div class="icon"><i class="fas fa-clipboard-list"></i></div>
             <h2>Marks Upload</h2>
@@ -152,7 +152,7 @@
             <p>Communicate with your students in real-time.</p>
         </div>
 
-        <div class="card" onclick="redirectTo('notepad.html')">
+        <div class="card" onclick="redirectTo('note.html')">
             <img src="C:\Users\aiswa\OneDrive\Desktop\teachers dashboard\WhatsApp Image 2025-01-26 at 01.19.19_baa95fd5.jpg" alt="Notepad Icon" class="card-image">
             <div class="icon"><i class="fas fa-sticky-note"></i></div>
             <h2>Notepad</h2>
@@ -166,14 +166,14 @@
             <p>Review and analyze student performance summaries.</p>
         </div>
 
-        <div class="card" onclick="redirectTo('attendance-calendar.html')">
+        <div class="card" onclick="redirectTo('academiccal.html')">
             <img src="C:\Users\aiswa\OneDrive\Desktop\teachers dashboard\WhatsApp Image 2025-01-26 at 01.26.24_75030a73.jpg" alt="Calendar Icon" class="card-image">
             <div class="icon"><i class="fas fa-calendar-alt"></i></div>
-            <h2>Attendance Calendar</h2>
-            <p>Track attendance visually with a calendar.</p>
+            <h2>Academic Calendar</h2>
+            <p>Track academic details visually with a calendar.</p>
         </div>
 
-        <div class="card" onclick="redirectTo('study-materials.html')">
+        <div class="card" onclick="redirectTo('study.html')">
             <img src="C:\Users\aiswa\OneDrive\Desktop\teachers dashboard\WhatsApp Image 2025-01-26 at 01.28.18_cbbc6100.jpg" alt="Study Materials Icon" class="card-image">
             <div class="icon"><i class="fas fa-book"></i></div>
             <h2>Study Materials</h2>
@@ -194,14 +194,14 @@
             <p>Distribute assignments and track submissions.</p>
         </div>
 
-        <div class="card" onclick="redirectTo('view timetable.html')">
+        <div class="card" onclick="redirectTo('timetable.html')">
             <img src="C:\Users\aiswa\OneDrive\Desktop\teachers dashboard\WhatsApp Image 2025-01-26 at 01.18.40_f1f27d8e.jpg" alt="timetable Icon" class="card-image">
             <div class="icon"><i class="fas fa-folder-open"></i></div>
-            <h2>view timetable</h2>
-            <p>view own timetable.</p>
+            <h2>view own timetable</h2>
+            <p>view teachers timetable.</p>
         </div>
 
-        <div class="card" onclick="redirectTo('view attendence.html')">
+        <div class="card" onclick="redirectTo('attendteach.html')">
             <img src="C:\Users\aiswa\OneDrive\Desktop\teachers dashboard\Free Vector _ Attendance Paper With Checklist Cartoon Vector Icon Illustration Education Business Isolated Flat.jpg" alt="Attendence Icon" class="card-image">
             <div class="icon"><i class="fas fa-folder-open"></i></div>
             <h2>view own attendence</h2>
