--- a/chat.html
+++ b/chat.html
@@ -101,14 +101,14 @@
 
     <!-- Tabs for students -->
     <div class="tabs-container">
-        <div class="tab"><a href="chating.html">Abijith</a></div>
-        <div class="tab"><a href="chating.html">Adharv</a></div>
-        <div class="tab"><a href="chating.html">Adithya</a></div>
-        <div class="tab"><a href="chating.html">Adwaith</a></div>
-        <div class="tab"><a href="chating.html">Aiswarya</a></div>
-        <div class="tab"><a href="chating.html">Akash</a></div>
-        <div class="tab"><a href="chating.html">Akhila</a></div>
-        <div class="tab"><a href="chating.html">Sahala</a></div>
+        <div class="tab"><a href="chat1.html">Abijith</a></div>
+        <div class="tab"><a href="chat1.html">Adharv</a></div>
+        <div class="tab"><a href="chat1.html">Adithya</a></div>
+        <div class="tab"><a href="chat1.html">Adwaith</a></div>
+        <div class="tab"><a href="chat1.html">Aiswarya</a></div>
+        <div class="tab"><a href="chat1.html">Akash</a></div>
+        <div class="tab"><a href="chat1.html">Akhila</a></div>
+        <div class="tab"><a href="chat1.html">Sahala</a></div>
     </div>
 
 </body>
